# pdf_manager

./: example.ipynb  pyproject.toml  requirments.txt
