[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-manager"
version = "0.1.0"
dependencies = [
  "jupyterlab > 4.0.0",
  "pypdf >=5.3.0",
  "python-dotenv",
]
requires-python = ">=3.12"
authors = [
  {name = "Pierre Attard", email = "pierre.attard@protonmail.com"}
]
maintainers = [
  {name = "Pierre Attard", email = "pierre.attard@protonmail.com"}
]
description = "Pdf manager"
readme = "README.rst"

